# mirai-aiko-reborn

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
app/core/: exceptions.py  http_client.py  lifespan.py  local_config.py  logger.py  state.py
app/core/agents/: agent_loader.py  crew_factory.py
app/dependencies/: auth.py  chat.py
app/models/: users.py
app/repositories/in_memory_database/: redis_repository.py  ttl_cache_repository.py
app/repositories/no_sql_database/: milvus_vector_repository.py  mongo_db_repository.py
app/routers/: auth.py  chat.py
app/schemas/: __init__.py  users.py
app/services/agents/: lotus_crew_service.py  sample_agent_service.py
app/services/auth/: hash_password_service.py  opaque_auth_service.py  user_auth_services.py  web_auth_service.py
app/services/data/: memory_service.py  message_vector_services.py
migrations/: env.py
sandbox/routers/: auth.py
secrets/: .gitignore  agent_configs.txt  llm_config.txt
src/: main.py
src/agentic_logic/: azure_agents.py  azure_llm.py  mirai_aiko_workflow.py  tools.py
src/agentic_logic/tools/: groq_web_search_tool.py
src/agentic_workflows/: mirai_aiko_workflow.py  run_workflow.py  tools.py
src/core/: config.py  local_config.py  security.py
src/data_storage/: ingest_file_to_vector_store.py  mongo_db_data_store.py  short_term_memory_store.py  vector_data_store.py
src/data_storage/all_no_sql_mongodb_database/: _mongo_db_main_connection.py
src/databases/: database.py
src/repositories/: mongo_db_base.py  redis_repository.py  users_repository.py
src/routers/: auth.py  chatbot.py
src/services/auth/: user_auth_services.py  (+2 more)
src/workflows/: run_workflow.py
(+10 files in other folders)
