[project]
name = "miako-app-mvp"
version = "0.1.0"
description = """Newly reborn """
requires-python = ">=3.13, <3.14"
dependencies = [
    "azure-ai-projects>=2.0.1",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "passlib[argon2]>=1.7.4",
    "pymongo>=4.17.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "ulid-py>=1.1.0",
    "uvicorn>=0.46.0",
]
